sjengida/g3/calc_attackers
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/attacks.c:510:17: error: use of undeclared identifier 'rook_o_8'
v15 = ( void **)rook_o_8; 
                ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/attacks.c:554:13: error: use of undeclared identifier 'jpt_403A6C'
if ( v15 == jpt_403A6C ) 
            ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/attacks.c:562:7: error: use of undeclared identifier 'bishop_o_7'
v21 = bishop_o_7[v20]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/attacks.c:632:16: error: use of undeclared identifier 'rook_o_8'
v3 = ( void **)rook_o_8; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/attacks.c:676:6: error: use of undeclared identifier 'jpt_403A6C'
if ( jpt_403A6C == v3 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/attacks.c:684:7: error: use of undeclared identifier 'bishop_o_7'
v10 = bishop_o_7[v9]; 
      ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/calc_attackers/src/obj/attacks.o] Error 1
